syntax = "proto3";

import "common.proto";

message LoginRequest {
    string firebaseUid = 1;
}

message LoginResponse {
    ErrorCode errorCode = 1;
    ProfileData ownProfile = 2;

    enum ErrorCode {
        OK = 0;
        INVALID_UID = 1;
    }
}

message ProfileRequest {
	string firebaseUid = 1;
	string gameSecret = 2;
}

message ProfileResponse {
	ProfileData profile = 1;
}

message UpdateProfile {
    string firebaseUid = 1;

    int32 xpDelta = 2;
    int32 coinsDelta = 3;

    string gameSecret = 4;
}

message MoveBase {
    string firebaseUid = 1;
    Coordinates position = 2;
    
    string gameSecret = 3;
}