syntax = "proto3";

import "common.proto";

message NearStops {
    string firebaseUid = 1;
    Coordinates position = 2;
}

message NearBases {
    string firebaseUid = 1;
    Coordinates position = 2;

    string gameSecret = 3; // Set by the game server when forwarding to the central server
}

message NearFeaturesResponse {
    repeated StopData stopData = 1;
    repeated BaseData baseData = 2;
}

message CollectStop {
    string firebaseUid = 1;
    Coordinates position = 2;

    string stopId = 3;
}

message CollectStopResponse {
    string stopId = 1;

    ProfileData updatedProfile = 2;
}

message FetchBase {
    string firebaseUid = 1;
    string baseId = 2;

    string gameSecret = 3; // Set by the game server when forwarding to the central server
}

message AttackBase {
    string firebaseUid = 1;
    string targetBaseId = 2;

    Coordinates position = 3;
}

message AttackResult {
    bool success = 1;
    ProfileData updatedProfile = 2;
}